# Cloudera-Inference-With-Windsurf

./: .coverage  .env.example  .envUpdate  .gitignore  CLOUDDERA_ONLY_SUMMARY.md  README.md  README_CLAUDEA_DEMO.md  STATUS_SUMMARY.md  actual_cloudera_generation.py  cloudera_ai_generated_mlb.py  cloudera_mlb_standings.py  cloudera_mlb_tables_fixed.py  cloudera_strict_generator.py  debug_auth.py  debug_mlb_api.py  direct_cloudera_test.py  disable_windsurf.py  enforce_cloudera.py  fix_urls.py  generate_mlb_standings_cloudera.py  generate_with_cloudera.py  number_analysis.json  prime_numbers_cloudera.py  prime_numbers_complete.py  prove_cloudera_ai_usage.py  pyproject.toml  pytest.ini  real_cloudera_generation.py  requirements-test.txt  requirements.txt  test_agent_integration.py  test_cloudera_only.py  test_cursor_vs_windsurf.py  validate_cloudera_only.py  working_cloudera_generator.py
docs/: cloudera_endpoints.md  examples.md  technical_blog_cloudera_ai_with_cascade.md  testing.md
examples/: basic_usage.py  code_generation.py
scratch/: __init__.py  basic_data_processing.py  cloudera_config.py  cloudera_demo.py  cloudera_llm_demo.py  cork_time.py  dc_time.py  debug_llm.py  embeddings_demo.py  hello_world.py  hello_world_multilingual.py  huntsville_time.py  knox_llm_client.py  knox_llm_demo.py  nlit_welcome.py  nlit_welcome_demo.py  simple_rag_demo.py  test_cloudera_config.py  test_env.py  test_knox_connection.py  web_scraper.py
tests/: .coverage  conftest.py  test_agent.py  test_embedding_client.py  test_llm_client.py  test_vector_store.py
windsurf_agent/: agent.py  (+12 more)
(+14 files in other folders)
